MDEV-29435 CHECK TABLE forgets to release latches after reporting failure

btr_validate_level(): Invoke mtr.commit() after a failure.
This omission was introduced in
commit 0b47c126e31cddda1e94588799599e138400bcf8 (MDEV-13542).