storage/innobase/btr/btr0btr.cc
@@ -4879,6 +4879,7 @@ corrupted:
 loop:
 	if (!block) {
 invalid_page:
+		mtr.commit();
 func_exit:
 		mem_heap_free(heap);
 		return err;
